Fix dimensions of artist artwork on mobile

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -600,6 +600,10 @@ header {
     max-width: none;
     align-items: center;
 
+    > .artwork {
+      max-width: 10em;
+    }
+
     .reference-links {
       text-align: center;
     }
